# cloud.devenv.sh

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  deploy.sh  devenv.nix  devenv.yaml  diesel.toml  package.nix  secretspec.toml
.claude/: settings.json
.github/workflows/: test.yml
backend/: Cargo.toml
backend/migrations/2024-12-09-232040_initial/: down.sql  up.sql
backend/migrations/2024-12-11-014247_github_installation_owner_id/: up.sql
backend/migrations/2025-03-18-042431_initial/: down.sql  up.sql
backend/migrations/2025-03-25-163537_add_ref_to_github_commit/: down.sql  up.sql
backend/migrations/2025-03-25-210945_remove_id_from_jobs_github/: down.sql  up.sql
backend/migrations/2025-03-27-090900_add_author_and_message_to_github_commit/: down.sql  up.sql
backend/migrations/2025-04-03-120949_add_vm_config_to_jobs/: down.sql  up.sql
backend/migrations/2025-04-06-200841_add_platform_to_runners/: down.sql  up.sql
backend/migrations/2025-04-06-233243_add_retry_count_to_jobs/: down.sql  up.sql
backend/migrations/2025-04-06-233309_add_created_at_to_jobs_and_runners/: down.sql  up.sql
backend/migrations/2025-04-07-141010_add_previous_job_id/: down.sql  up.sql
backend/migrations/2025-06-18-170520_fix_naming_conventions/: down.sql  up.sql
backend/migrations/2025-06-18-194318_add_default_github_instance/: down.sql  up.sql
backend/migrations/2025-06-18-194543_add_github_owner_instance_foreign_key/: down.sql  up.sql
backend/migrations/2026-01-19-000000_oauth_auth_tables/: down.sql  up.sql
backend/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  oauth_store.rs  schema.rs  serve.rs
backend/src/account/: mod.rs  model.rs  serve.rs
backend/src/github/: model.rs  serve.rs
backend/src/job/: model.rs  serve.rs
backend/src/runner/: cloudconfig.rs  mod.rs  model.rs  serve.rs
backend/src/zitadel/: actions.rs  mod.rs  serve.rs  types.rs
cloud-hypervisor-client/: Cargo.toml  README.md
cloud-hypervisor-client/.openapi-generator/: FILES
cloud-hypervisor-client/docs/: DefaultApi.md  RngConfig.md
cloud-hypervisor-client/src/: lib.rs
cloud-hypervisor-client/src/apis/: configuration.rs  mod.rs  request.rs
docs/: auth.md  sql-naming-conventions.md
frontend/: README.md  elm-land.json  elm-srcs.nix  elm.json  package-lock.json  package.json  package.nix  tsconfig.json
frontend/generated-api/: README.md
frontend/generated-api/src/: Api.elm
frontend/generated-api/src/Api/: Data.elm
frontend/generated-api/src/Api/Request/: Default.elm
frontend/src/: Auth.elm  Effect.elm  Icons.elm  Oidc.elm  Ports.elm  Shared.elm  WebData.elm  index.css  interop.ts
frontend/src/Components/: Breadcrumbs.elm  Button.elm  CommitJobs.elm  Dropdown.elm  Footer.elm  GitHub.elm  GitHubCommit.elm  Job.elm  Label.elm  LandingLayout.elm  ListTile.elm  LogViewer.elm  OwnerRepos.elm
frontend/src/Duration/: Format.elm
frontend/src/Layouts/: Main.elm
frontend/src/Oidc/: Model.elm  Msg.elm
frontend/src/Pages/: Home.elm  Home_.elm  Login.elm  NotFound_.elm  Waitlist.elm
frontend/src/Pages/Github/: Owner_.elm
frontend/src/Pages/Github/Owner_/: Repo_.elm
frontend/src/Pages/Github/Owner_/Repo_/: Rev_.elm
frontend/src/Shared/: Model.elm  Msg.elm
init/: Cargo.toml
init/src/: lib.rs
logger/: Cargo.toml
logger/benches/: throughput.rs
logger/src/: lib.rs  main.rs  server.rs  stream.rs
nix/lightainer/: devenv.nix
nix/zitadel/: 0001-feat-github-idp-fetch-user-emails-when-primary-is-no.patch  0002-init-skip-creating-role-if-it-exists.patch  console-use-local-protobuf-plugins.patch  console.nix  package.nix  service.nix
runner/: .gitignore  Cargo.toml  README.md  devenv.nix
runner/macos/: runner.pkr.hcl
runner/src/: client.rs  cloud.nix  config.rs  job_manager.rs  lib.rs  protocol.rs  resource_manager.rs  vm.rs  vm_manager.rs  vsock.rs
runner/src/vm_impl/: linux.rs  linux_networking.rs  macos.rs  mod.rs  tests.rs
terraform/zitadel/: README.md  actions-v2.tf  main.tf  terraform.tfvars.example  variables.tf
terraform/zitadel/module/: actions-v2.tf  main.tf  outputs.tf  variables.tf
