[workspace]
resolver = "2"
members = ["backend", "logger", "runner", "init", "cloud-hypervisor-client"]

[workspace.dependencies]
secretspec = "0.3.1"
secretspec-derive = "0.3.1"
axum = "0.8"
axum-extra = { version = "0.10.0", features = ["json-lines"] }
axum-typed-websockets = { version = "0.6.0", git = "https://github.com/cachix/axum-typed-websockets" }
async-stream = "0.3.6"
async-trait = "0.1.88"
base64 = "~0.7.0"
bytes = "1.9.0"
cached = "0.55.1"
cc = "1.0"
cfg-if = "1.0.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive", "env"] }
color-eyre = "0.6.3"
diesel = { version = "2.2.10", features = [
    "uuid",
    "time",
    "chrono",
    "serde_json",
] }
diesel-async = { version = "0.5.1", features = [
    "async-connection-wrapper",
    "deadpool",
    "postgres",
    "tokio-postgres",
] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
digest = "0.10.7"
devenv = { git = "https://github.com/cachix/devenv", branch = "main" }
eyre = "0.6.12"
futures = "0.3.31"
futures-util = "0.3.31"
gen_passphrase = { version = "0.1.1", features = ["eff_large"] }
generic-array = "1.1.0"
hex = "0.4.3"
hmac = "0.12.1"
http = "~0.2"
http-body-util = { version = "0.1.2" }
hyper = { version = "^1.3.1", features = ["full"] }
hyper-util = { version = "0.1.5", features = [
    "client",
    "client-legacy",
    "http1",
    "http2",
] }
hyperlocal = "0.9.1"
jsonwebtoken = "9.3.0"
libc = "0.2.153"
metrics-prometheus = "0.10.0"
octocrab = "0.44.0"
pin-project = "1.1.8"
posthog-rs = "0.3.5"
prometheus = "0.14.0"
reqwest = { version = "0.12.12", features = [
    "stream",
    "json",
    "rustls-tls-webpki-roots",
] }
rustls = "0.23.4"
sentry = "0.37.0"
sentry-tower = { version = "0.37.0", features = [
    "axum",
    "axum-matched-path",
    "http",
] }
sentry-tracing = "0.37.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_repr = "^0.1"
serde_yaml = "0.9.27"
sha2 = "0.10.8"
slatedb = "0.8.0"
strum = "0.27"
strum_macros = "0.27"
sysinfo = "0.34.2"
tempfile = "3.14.0"
thiserror = "2.0.3"
time = { version = "0.3.37", features = ["formatting"] }
tokio = { version = "1.41.1", features = [
    "rt-multi-thread",
    "full",
    "macros",
    "sync",
] }
tokio-stream = "0.1.17"
tokio-tungstenite = "0.26.2"
toml = "0.8.19"
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["catch-panic", "trace", "cors"] }
tracing = "0.1.40"
tokio-vsock = "0.7.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }
tracing-error = "0.2.1"
# https://github.com/tokio-rs/console/pull/623
tonic = "0.13"
url = { version = "2.5.4", features = ["serde"] }
utoipa = { version = "5.3.1", features = ["chrono", "uuid"] }
utoipa-axum = "0.2"
uuid = { version = "1.11.0", features = ["v7", "serde"] }
which = "7.0.2"
zitadel = { git = "https://github.com/cachix/zitadel-rust", branch = "cachix", features = ["api", "axum", "actions-v3"] }
gix = { version = "0.71.0", features = [
    "worktree-mutation",
    "blocking-network-client",
    "blocking-http-transport-reqwest-rust-tls",
] }
signal-hook = "0.3.17"
nix = { version = "0.29.0", features = ["fs", "hostname", "mount"] }
fs_extra = "1.3.0"
prost = "0.13"

backon = "1.5"

# MacOS-specific dependencies
block2 = "0.6"
dispatch2 = "0.3.0"
objc2 = { version = "0.6", features = ["std", "exception"] }
objc2-app-kit = "0.3"
objc2-foundation = "0.3"
objc2-virtualization = "0.3"
