[package]
name = "cloud-hypervisor-client"
version = "0.3.0"
authors = ["OpenAPI Generator team and contributors"]
description = "Local HTTP based API for managing and inspecting a cloud-hypervisor virtual machine."
license = "Apache 2.0"
edition = "2021"

[target.'cfg(target_os = "linux")'.dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_repr.workspace = true
url.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
http.workspace = true
base64.workspace = true
futures.workspace = true
hyperlocal.workspace = true
