[package]
name = "devenv-init"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
clap = { workspace = true, features = ["derive"] }
libc.workspace = true
nix.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
