[package]
name = "devenv-logger"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "client"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
async-stream.workspace = true
axum.workspace = true
axum-extra.workspace = true
bytes.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
slatedb.workspace = true
tower-http = { workspace = true, features = ["cors"] }
time.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
uuid.workspace = true

[dev-dependencies]
bytes.workspace = true
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
hyperlocal.workspace = true

[[bench]]
name = "throughput"
harness = false
